2022-12-01T01:21:27Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3588557856 # 662
* notice: last 14d: unq all: 2 21
* notice: prev accum: outdated-unq outdated-all / unq all: 254 460 / 266 482
* notice: next accum: outdated-unq outdated-all / unq all: 255 462 / 266 483
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2022-11-16] / []

2022-11-30T16:20:21Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3585114759 # 661
* notice: last 14d: unq all: 2 22
* notice: prev accum: outdated-unq outdated-all / unq all: 254 460 / 266 483
* notice: next accum: outdated-unq outdated-all / unq all: 254 460 / 266 482
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -1 / +1 +2 -0 -1 / 1 1
* notice: removed / changed dates: [] / [2022-11-16]

2022-11-29T16:20:28Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3575973914 # 658
* notice: last 14d: unq all: 2 23
* notice: prev accum: outdated-unq outdated-all / unq all: 253 458 / 266 482
* notice: next accum: outdated-unq outdated-all / unq all: 254 460 / 266 483
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2022-11-15] / []

2022-11-29T08:19:11Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3572238129 # 657
* notice: last 14d: unq all: 2 24
* notice: prev accum: outdated-unq outdated-all / unq all: 253 458 / 266 483
* notice: next accum: outdated-unq outdated-all / unq all: 253 458 / 266 482
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -1 / +1 +2 -0 -1 / 1 1
* notice: removed / changed dates: [] / [2022-11-15]

2022-11-29T01:13:45Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3570080561 # 656