@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-11-18T01:23:37Z",
-  "count" : 2,
+  "timestamp" : "2022-12-01T08:19:19Z",
+  "count" : 1,
   "count_minmax" : [ 1, 2 ],
-  "count_decinc" : [ -0, +2 ],
+  "count_decinc" : [ -1, +2 ],
   "uniques" : 1,
   "uniques_minmax" : [ 1, 1 ],
   "uniques_decinc" : [ -0, +1 ]
