@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-12-01T01:21:27Z",
+  "timestamp" : "2022-12-01T08:19:19Z",
   "count_outdated" : 462,
   "uniques_outdated" : 255,
-  "count" : 483,
+  "count" : 482,
   "uniques" : 266,
   "clones" : [
     {
       "timestamp": "2022-11-17T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
