@@ -1,3 +1,11 @@
+2022-12-01T08:19:19Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3590755920 # 663
+* notice: last 14d: unq all: 2 20
+* notice: prev accum: outdated-unq outdated-all / unq all: 255 462 / 266 483
+* notice: next accum: outdated-unq outdated-all / unq all: 255 462 / 266 482
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -1 / +1 +2 -0 -1 / 1 1
+* notice: removed / changed dates: [] / [2022-11-17]
+
 2022-12-01T01:21:27Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3588557856 # 662
 * notice: last 14d: unq all: 2 21
